hphp/test/zend7/tests/lang/catchable_error_001.php.expectf

Fatal error: %s
Stack trace:
#0 %s(%d): blah(Object(stdClass))
#1 {main}
  thrown in %scatchable_error_001.php on line 5